.provarCaches/00Df2000001KKNJEA4/objects/DataCategory_Backend__c.object
<CustomObject>
    <fields>
        <fullName>DataCategoryGroupName__c</fullName>
        <label>DataCategoryGroupName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCategoryID__c</fullName>
        <label>DataCategoryID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataCategoryName__c</fullName>
        <label>DataCategoryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DataCategory Backend</label>
    <nameField>
        <label>DataCategory Backend  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataCategory Backends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>